; ModuleID = '/home/carl/AnghaBench/linux/drivers/slimbus/extr_core.c_slim_device_update_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/slimbus/extr_core.c_slim_device_update_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slim_device = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.slim_driver = type { i32 (%struct.slim_device.0*, i32)* }
%struct.slim_device.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.slim_device*, i32)* @slim_device_update_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @slim_device_update_status(%struct.slim_device* %0, i32 %1) #0 {
  %3 = alloca %struct.slim_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.slim_driver*, align 8
  store %struct.slim_device* %0, %struct.slim_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %7 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %42

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %15 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %17 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %12
  br label %42

22:                                               ; preds = %12
  %23 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %24 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call %struct.slim_driver* @to_slim_driver(i32 %26)
  store %struct.slim_driver* %27, %struct.slim_driver** %5, align 8
  %28 = load %struct.slim_driver*, %struct.slim_driver** %5, align 8
  %29 = getelementptr inbounds %struct.slim_driver, %struct.slim_driver* %28, i32 0, i32 0
  %30 = load i32 (%struct.slim_device.0*, i32)*, i32 (%struct.slim_device.0*, i32)** %29, align 8
  %31 = icmp ne i32 (%struct.slim_device.0*, i32)* %30, null
  br i1 %31, label %32, label %42

32:                                               ; preds = %22
  %33 = load %struct.slim_driver*, %struct.slim_driver** %5, align 8
  %34 = getelementptr inbounds %struct.slim_driver, %struct.slim_driver* %33, i32 0, i32 0
  %35 = load i32 (%struct.slim_device.0*, i32)*, i32 (%struct.slim_device.0*, i32)** %34, align 8
  %36 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %37 = bitcast %struct.slim_device* %36 to %struct.slim_device.0*
  %38 = load %struct.slim_device*, %struct.slim_device** %3, align 8
  %39 = getelementptr inbounds %struct.slim_device, %struct.slim_device* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 %35(%struct.slim_device.0* %37, i32 %40)
  br label %42

42:                                               ; preds = %11, %21, %32, %22
  ret void
}

declare dso_local %struct.slim_driver* @to_slim_driver(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
